# tcc-sga

./: .easignore  .gitignore  README.md  example.env  index.html  package-lock.json  requirements.txt
assets/: index-BqDiiIwD.js  (+3 more)
backend/: README.md  example.env  pyproject.toml  requirements-dev.txt  requirements.txt
backend/src/: main.py
backend/src/Controller/: AmbulanceController.py  AuthController.py  DriverController.py  ManagerController.py  TravelController.py  UpgradeTokenController.py  UserController.py  __init__.py
backend/src/DB/: Migration.py  __init__.py  postgres.py  sqlite.py
backend/src/Decorators/: DriverDecorator.py  ManagerDecorator.py  UserDecorators.py  __init__.py
backend/src/Error/: ErrorClass.py  __init__.py
backend/src/Logging/: ColorsEnum.py  LevelEnum.py  Logging.py  __init__.py
backend/src/Model/: Ambulance.py  BaseModel.py  Driver.py  Equipment.py  Manager.py  RestorePassword.py  Travel.py  UpgradeToken.py  User.py  UserSession.py
backend/src/Repository/: AmbulanceRepository.py  DriverRepository.py  ManagerRepository.py  RestorePasswordRepository.py  SessionRepository.py  TravelRepository.py  UserRepository.py
backend/src/Schema/: BaseModel.py
backend/src/Service/: AmbulanceService.py  DriverService.py  ManagerService.py  SessionService.py  TravelService.py  UserService.py  Utils.py
backend/src/Utils/: env.py
backend/src/Validator/: AmbulanceValidator.py  GenericValidator.py  ManagerValidator.py  TravelValidator.py  UserValidator.py
backend/test/: conftest.py
backend/test/Insert_users/: insert.py  requiriments.txt
(+324 files in other folders)
