[project]
name = "TCC-SGA"
version = "0.1.0"
description = "Backend para o TCC do Sistema Gerenciador de Ambulância (A.k.a SGA)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.3.0",
    "dotenv==0.9.9",
    "email-validator==2.2.0",
    "fastapi==0.115.14",
    "passlib==1.7.4",
    "peewee==3.18.1",
    "psycopg-binary==3.2.9",
    "pyjwt==2.10.1",
    "python-multipart==0.0.20",
    "slowapi==0.1.9",
    "uvicorn==0.34.3",
]
